# openivm

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake  ivm_compiled_queries_emp_names.sql  ivm_compiled_queries_mv1.sql  ivm_system_tables.sql  ivm_upsert_queries_mv1.sql  results_tpcdi.csv  rewriter_benchmark_results.csv  rewriter_benchmark_tpcc_after_correctness_fixes.csv  rewriter_benchmark_tpcc_incremental_fixes.csv  rewriter_benchmark_tpcc_incremental_fixes_120s.csv  rewriter_benchmark_tpcc_incremental_fixes_fresh.csv  rewriter_benchmark_tpcc_latest.csv  rewriter_benchmark_tpcc_sf3.csv  rewriter_benchmark_tpcc_window_relaxed_120s.csv  rewriter_benchmark_tpcdi_latest.csv  rewriter_benchmark_tpcdi_results.csv  rewriter_benchmark_tpcdi_sf1.csv  tpcc_results_new.csv
.cache/clangd/: compile_commands.json
.claude/: settings.json
.github/workflows/: MainDistributionPipeline.yml
benchmark/: CMakeLists.txt  deltas.sql  requirements.txt
benchmark/poc/: README.md  RESULTS_SUMMARY.md  amortization_poc.py  chain4_smoke.csv  chain_smoke.csv  chain_smoke2.csv  chained_mv_poc.py  div_smoke.csv  diverse_pipelines.py  fanout_diamond_poc.py  fd_smoke.csv  goldilocks_poc.py  join_poc.py  join_smoke.csv  mixed_dml_poc.py  partial_match_poc.py  percentiles_poc.py  poc10_6m.csv  poc1_200k.csv  poc1_2m.csv  poc2_2m.csv  poc2_2m_dense.csv  poc2_6m.csv  poc3_6m.csv  poc3_6m_full.csv  poc4_6m.csv  poc6_2m.csv  poc6_6m.csv  poc7_6m_d1pct.csv  poc8_6m.csv  poc9_6m.csv  robustness_poc.py  smoke.csv
benchmark/queries/: ducklake_0006.sql  ducklake_0007.sql  ducklake_0010.sql  ducklake_0012.sql  ducklake_0014.sql  ducklake_0015.sql  ducklake_0016.sql  ducklake_0017.sql  ducklake_0018.sql  ducklake_0019.sql  ducklake_0020.sql  ducklake_0021.sql  ducklake_0022.sql  ducklake_0023.sql  ducklake_0026.sql  ducklake_0027.sql  ducklake_0028.sql  ducklake_0029.sql  ducklake_0030.sql  ducklake_0031.sql  ducklake_0032.sql  ducklake_0034.sql  ducklake_0035.sql  ducklake_0037.sql  ducklake_0038.sql  ducklake_0039.sql  ducklake_0043.sql  ducklake_0045.sql  ducklake_0046.sql  ducklake_0049.sql  ducklake_0050.sql  ducklake_0053.sql  ducklake_0057.sql  ducklake_0058.sql  ducklake_0059.sql  ducklake_0060.sql  ducklake_0063.sql  ducklake_0064.sql  ducklake_0065.sql  ducklake_0067.sql  (+1114 more)
benchmark/queries/tpcc/: delta_0001.sql  delta_0002.sql  delta_0003.sql  delta_0004.sql  delta_0005.sql  delta_0006.sql  delta_0007.sql  delta_0008.sql  delta_0009.sql  delta_0010.sql  delta_0011.sql  delta_0012.sql  delta_0013.sql  delta_0014.sql  delta_0015.sql  delta_0016.sql  delta_0017.sql  delta_0018.sql  delta_0019.sql  delta_0020.sql  delta_0021.sql  delta_0022.sql  delta_0023.sql  delta_0024.sql  delta_0025.sql  delta_0026.sql  delta_0027.sql  delta_0028.sql  delta_0029.sql  delta_0030.sql  delta_0031.sql  delta_0032.sql  delta_0033.sql  delta_0034.sql  delta_0035.sql  delta_0036.sql  delta_0037.sql  delta_0038.sql  delta_0039.sql  delta_0040.sql  (+1458 more)
benchmark/results/: daemon_sf1.jsonl.recovered  daemon_stress.jsonl  flag_benchmark_joins.csv  flag_benchmark_sf1.csv  flag_benchmark_sf3.csv  flag_benchmark_sf3_large.csv
benchmark/scripts/: generate_queries.py  validate_incremental.py
benchmark/src/: cost_model_benchmark.cpp  daemon_benchmark.cpp  flag_benchmark.cpp  rewriter_benchmark.cpp  tpcc_helpers.cpp  tpcc_helpers.hpp  tpcc_setup.cpp
benchmarks/: openivm_benchmark.cpp  openivm_benchmark.hpp
docs/: TODO.md  codebase-audit-2026-04-30.md  configuration.md  ducklake.md  limitations.md  refresh_hooks.md
docs/internals/: concurrency.md  cost_model.md  delta-tables.md  linearity.md  metadata-columns.md  parser.md  performance.md  schema-evolution.md  state-and-overhead.md  system-tables.md
docs/operators/: asof-join.md  count-distinct.md  cte-subquery.md  distinct.md  filter.md  full-outer-join.md  grouped-aggregates.md  grouping-sets.md  inner-join.md  left-join.md  list-aggregates.md  positional-join.md  projection-filter.md  projection.md  semi-anti-join.md  top-k.md  ungrouped-aggregates.md  union-all.md  unnest.md  window-functions.md
docs/optimizations/: append-only.md  companion-rows.md  delta-consolidation.md  delta-skipping-rules.md  empty-delta-skip.md  fk-aware-pruning.md  indexing.md
docs/refresh/: automatic-refresh.md  pipelines.md  refresh-strategies.md
scripts/: learned_cost_sim.py
src/: compile_facts.cpp  openivm_compile_upsert.cpp  openivm_cost_model.cpp  openivm_extension.cpp  openivm_index_regen.cpp  openivm_insert_rule.cpp  openivm_metadata.cpp  openivm_parser.cpp  openivm_rewrite_rule.cpp  openivm_upsert.cpp  openivm_utils.cpp
src/core/: incremental_checker.cpp  ivm_checker.cpp  ivm_delta_model.cpp  ivm_plan_rewrite.cpp  ivm_view_classifier.cpp  openivm_metadata.cpp  openivm_parser.cpp  openivm_refresh_daemon.cpp  openivm_refresh_locks.cpp  openivm_utils.cpp  parser.cpp  parser_create_mv_helpers.cpp  parser_ddl.cpp  parser_plan_helpers.cpp  parser_sql_extractors.cpp  plan_rewrite.cpp  plan_rewrite_aggregates.cpp  refresh_daemon.cpp  refresh_locks.cpp  refresh_metadata.cpp  sql_utils.cpp
src/delta/: delta_compiler.cpp  delta_helpers.cpp
src/include/: compile_facts.hpp  ivm_rule.hpp  openivm_compile_upsert.hpp  openivm_constants.hpp  openivm_cost_model.hpp  openivm_extension.hpp  openivm_index_regen.hpp  openivm_insert_rule.hpp  openivm_metadata.hpp  openivm_parser.hpp  openivm_rewrite_rule.hpp  openivm_upsert.hpp  openivm_utils.hpp
src/match/: constraint_cache.cpp  equivalence_classes.cpp  mv_catalog_index.cpp  plan_canonical.cpp  predicate_oracle.cpp
src/rules/: aggregate.cpp  column_hider.cpp  delim_join.cpp  distinct.cpp  ducklake_join.cpp  filter.cpp  helpers.cpp  incremental_rewrite_rule.cpp  ivm_aggregate_rule.cpp  ivm_aggregate_rule.hpp  ivm_column_hider.cpp  ivm_distinct_rule.cpp  join.cpp  (+18 more)
(+198 files in other folders)
